--- a/src/Admin/Client/Shared/NavMenu.razor
+++ b/src/Admin/Client/Shared/NavMenu.razor
@@ -1,9 +1,7 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/dashboard">Dashboard</MudNavLink>
-    <MudNavLink Href="/servers">Servers</MudNavLink>
-    <MudNavGroup Title="Settings" Expanded="true">
-        <MudNavLink Href="/users">Users</MudNavLink>
-        <MudNavLink Href="/security">Security</MudNavLink>
+    <MudNavLink Href="/">Dashboard</MudNavLink>
+    <MudNavGroup Title="Exchanges" Expanded="true">
+    </MudNavGroup>    
+    <MudNavGroup Title="Queues" Expanded="true">
     </MudNavGroup>
-    <MudNavLink Href="/about">About</MudNavLink>
 </MudNavMenu>
