--- a/src/Admin/Client/Shared/NavMenu.razor
+++ b/src/Admin/Client/Shared/NavMenu.razor
@@ -1,7 +1,3 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="/">Dashboard</MudNavLink>
-    <MudNavGroup Title="Exchanges" Expanded="true">
-    </MudNavGroup>    
-    <MudNavGroup Title="Queues" Expanded="true">
-    </MudNavGroup>
+    <MudNavLink Href="/dashboard">Dashboard</MudNavLink>
 </MudNavMenu>
