Added docker support for the server host application

--- a/src/Admin/Client/Pages/Components/MessageChartComponent.razor
+++ b/src/Admin/Client/Pages/Components/MessageChartComponent.razor
@@ -35,7 +35,7 @@
         Title = new
         {
             Display = true,
-            Text = "Line chart (horizontal scroll) sample"
+            Text = "Messages"
         },
         Scales = new
         {
@@ -46,7 +46,7 @@
                     ScaleLabel = new 
                     {
                         Display = true, 
-                        LabelString = "value" 
+                        LabelString = "count" 
                     }
                 }
             }
