Fixed cancellation exceptions

--- a/src/Admin/Client/Pages/Components/MessageChartComponent.razor
+++ b/src/Admin/Client/Pages/Components/MessageChartComponent.razor
@@ -24,10 +24,10 @@
     public struct LiveDataPoint
     {
         // ReSharper disable once UnusedAutoPropertyAccessor.Global
-        public object X { get; set; } = null!;
+        public object? X { get; set; }
 
         // ReSharper disable once UnusedAutoPropertyAccessor.Global
-        public object Y { get; set; } = null!;
+        public object? Y { get; set; }
     }
 
     readonly object _horizontalLineChartOptions = new
